--- a/notebook/src/components/css/about.css
+++ b/notebook/src/components/css/about.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #dacccc;
     color: #333;
 }
 
@@ -46,13 +46,14 @@ body {
 }
 
 .card-content h3 {
+    margin-top:4px;
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
 
 .card-content p {
     font-size: 1rem;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     line-height: 1.6;
 }
 
@@ -73,7 +74,7 @@ h1 {
     font-size: 3rem;
     margin-top: 10px;
     margin-bottom:15px;
-    margin-left: 640px;
+    margin-left: 400px;
     color: #333;
     text-transform: uppercase;
     letter-spacing: 3px;
